--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -33,15 +33,13 @@
 .main {
   display: flex;
   justify-content: center;
+  text-align: center;
   max-width: 850px;
   min-width: 400px;
+  border: solid 1px;
+  padding: 1px;
 }
 
-@media (max-width: 600px) {
-  .main {
-    text-align: center;
-  }
-}
 @media (min-width: 650px) {
   .main {
     font-size: 1.05em;
